[gd_scene load_steps=2 format=3 uid="uid://54bdo07bvv04"]

[ext_resource type="Script" path="res://scripts/level_selector.gd" id="1_x0bis"]

[node name="level_selector" type="Control"]
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x0bis")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 542.0
offset_top = 201.0
offset_right = 604.0
offset_bottom = 407.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="level_1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="level_2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="level_3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 3
"

[node name="level_4" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 4
"

[node name="level_5" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 5
"

[node name="Hub" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Hub
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level_4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/level_5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Hub" to="." method="_on_hub_pressed"]
